--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,34 @@
 body {
 
 }
+
+.image {
+	width: 100px;
+	height: 100px;
+}
+
+#header {
+	position:fixed;
+	left:10%;
+	top:5%;
+	width:80%;
+	background-color: orange;
+}
+
+#container {
+	position:fixed;
+	width:80%;
+	left:10%;
+	top:10%;
+	bottom:10%;
+	overflow-y: scroll;
+	background-color:lightgrey;
+}
+
+#footer {
+	position:fixed;
+	top:90%;
+	left:10%;
+	width:80%;
+	background-color: grey;
+}
